@@ -13,6 +13,10 @@ Limitations:
 
 
 Revision History:
+10-Sep-2004:
+   Problems fixed:
+       1. bug #1013045: Form, Link, and Image id tags are now recognizable from JavaScript where a name tag would be
+
  9-Sep-2004:
    Problems fixed:
        1. Slashes in URL parameters were being misinterpeted as navigation
